--- a/index.css
+++ b/index.css
@@ -1,44 +1,54 @@
 body {
-   padding: 0;
-   margin: 0;
-   font-family: "Forum", serif;
+  padding: 0;
+  margin: 0;
+  font-family: 'Forum', serif;
 }
 
 .hero {
-   height: 90vh;
-   background-color: #f08e80;
+  height: 90vh;
+  background-color: #f08e80;
 }
 
 .navbar {
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   color: white;
-   padding: 24px 32px;
-   box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  padding: 24px 32px;
+  box-sizing: border-box;
 }
 
 .navbar .links a {
-   color: white;
-   text-decoration: none;
-   margin-right: 16px;
-   font-size: 1.2rem;
+  color: white;
+  text-decoration: none;
+  margin-right: 16px;
+  font-size: 1.2rem;
 }
 
 .navbar p {
-   font-size: 2rem;
-   font-weight: bold;
-   margin: 0;
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 0;
 }
 
 .navbar .contact {
-   background-color: white;
-   color: #f08e80;
-   padding: 1rem 1.5rem;
-   text-decoration: none;
+  background-color: white;
+  color: #f08e80;
+  padding: 1rem 1.5rem;
+  text-decoration: none;
 }
 
 .navbar .contact:hover {
-   opacity: 0.8;
- }
- 
+  opacity: 0.8;
+}
+
+.hero-content {
+  padding: 0 15%;
+}
+
+.tagline {
+  font-size: 4.5rem;
+  color: white;
+  letter-spacing: 2px;
+  padding: 2rem 0;
+}
