--- a/index.css
+++ b/index.css
@@ -5,8 +5,10 @@ body {
 }
 
 .hero {
-  height: 90vh;
+  min-height: 90vh;
   background-color: #f08e80;
+  color: white;
+  display: inline-block;
 }
 
 .navbar {
@@ -52,3 +54,29 @@ body {
   letter-spacing: 2px;
   padding: 2rem 0;
 }
+
+.two-column-section {
+   font-size: 2rem;
+}
+
+.two-column-section p {
+   width: 50%;
+   box-sizing: border-box;
+   float: left;
+}
+
+.two-column-section .skills {
+   width: 50%;
+   float: left;
+   box-sizing: border-box;
+   padding: 0;
+   list-style: none;
+ }
+ 
+ .two-column-section .skills li {
+   width: 50%;
+   float: left;
+   font-size: 1.25rem;
+   margin: 8px 0;
+ }
+ 
