--- a/index.css
+++ b/index.css
@@ -56,27 +56,95 @@ body {
 }
 
 .two-column-section {
-   font-size: 2rem;
+  font-size: 2rem;
 }
 
-.two-column-section p {
-   width: 50%;
-   box-sizing: border-box;
-   float: left;
+.two-column-section > p {
+  width: 50%;
+  box-sizing: border-box;
+  float: left;
 }
 
 .two-column-section .skills {
-   width: 50%;
-   float: left;
-   box-sizing: border-box;
-   padding: 0;
-   list-style: none;
+  width: 50%;
+  float: left;
+  box-sizing: border-box;
+  padding: 0;
+  list-style: none;
+}
+
+.two-column-section .skills li {
+  width: 50%;
+  float: left;
+  font-size: 1.25rem;
+  margin: 8px 0;
+}
+
+.blog-section {
+  background-color: white;
+  padding: 64px 0;
+}
+
+.blog-content {
+  padding: 0 15%;
+}
+
+.two-column-section .blog-posts {
+  width: 50%;
+  float: left;
+}
+
+.blog-title {
+  font-size: 1.5rem;
+}
+
+.blog-text {
+  font-size: 1rem;
+}
+
+.blog-posts {
+  margin-top: 24px;
+}
+
+.blog-posts .blog-date {
+  font-size: 0.9rem;
+  color: grey;
+  margin-bottom: 32px;
+}
+
+.blog-posts p {
+  margin: 8px 0;
+}
+
+
+.events-section {
+   background-color: #fdf0e6;
+   padding: 64px 0;
+   display: inline-block;
+   width: 100%;
  }
  
- .two-column-section .skills li {
+ .events-content {
+   padding: 0 15%;
+ }
+ 
+ .events-card {
    width: 50%;
    float: left;
-   font-size: 1.25rem;
+   margin-top: 24px;
+ }
+ 
+ .events-card p {
    margin: 8px 0;
  }
- 
+ .event-title {
+   font-size: 1.5rem;
+ }
+ .event-location {
+   font-size: 1rem;
+ }
+ .events-card .event-date {
+   font-size: 0.9rem;
+   color: grey;
+   margin-bottom: 32px;
+ }
